added correct graphics plot with matplot lib and the cover page

--- a/Text/RegressionLineaire.tex
+++ b/Text/RegressionLineaire.tex
@@ -23,7 +23,7 @@ Cela signifie que  y est une fonction linéaire de x avec ${\theta }_{i}$ des pa
 on peut le remarque sur la figure suivante ou notre hypothèse est une droite :
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=0.5\textwidth]{fig/regressionLineaire1var.png}
+	\includegraphics[width=0.5\textwidth]{fig/linear_regression_1.png}
 	\caption{Régression Linéaire avec une variable}
 	\label{fig:image1}
 \end{figure}
@@ -42,8 +42,8 @@ Dans ce cas au lieu d'utiliser une droite on utilise un polynôme à n dégrée 
 ${h}_{\theta}\left(x\right)={\theta }_{0}{x}_{0}+{\theta }_{1}{x}_{1}+{\theta }_{2}{x}_{2}^{2}+{\theta }_{3}{x}_{3}^{3}+....{\theta }_{n}{x}_{n}^{n}$
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=0.5\textwidth]{fig/regressionPlokynome.png}
-	\caption{Régression Polynomiale avec un polynôme de degré 2}
+	\includegraphics[width=0.5\textwidth]{fig/poly_regression.png}
+	\caption{différents types de Régression Polynomiale }
 	\label{fig:image2}
 \end{figure}
 le travail restant sera de trouver les paramètres ${\theta }_{i}$ pour notre fonction  ${h}_{\theta}\left(x\right)$ mais comment les trouver?
@@ -84,7 +84,7 @@ On appelle l'erreur de prédiction , la valeur définie par   :
   comme on peut le remarqué sur la figure suivante :
   \begin{figure}[ht]
   	\centering
-  	\includegraphics[width=0.5\textwidth]{fig/regressionPlokynome.png}
+  	\includegraphics[width=0.5\textwidth]{fig/Cost_vs_iterations.png}
   	\caption{Variation de J en fonction du nombre des itérations}
   	\label{fig:image3}
   \end{figure}
