--- a/text/resume.tex
+++ b/text/resume.tex
@@ -18,7 +18,7 @@ Aujourd'hui toutes les entreprises collectent et stockent de grandes quantités 
 \paragraph{}
 Des nombreuses recherches ont été menées sur l'application du data mining dans différents domaines,  entre autre : les banques , telecom , assurances, etc
 Mais peu des recherches de ce genre sont menées sur l'application du data mining dans le domaine de l'éducation. c'est ainsi que nous avons décider 
-de nous pencher sur le sujet ayant pour thème \textit{ \textbf data mining appliqué à la prédiction de l'orientation des élèves finalistes du secondaire à l'université } .
+de nous pencher sur le sujet ayant pour thème \textit{ \textbf data mining à l’amélioration  de l'orientation des élèves finalistes du secondaire à l'université } .
 \paragraph{}
 Pour mener a bien ce travail nous nous sommes posé la question suivante \emph{Comment utiliser les techniques  du data mining pour doter les universités des outils d'aide à la décision les permettant de bien orienter les étudiants dès leur entrée à l'université ?  } et pour y répondre nous avons utilisé la méthodologie  \ac{CRISP-DM}:celle ci est la méthodologie la plus utilisée en industrie pour les projet data mining.
 \paragraph{}
