--- a/text/chapter4.tex
+++ b/text/chapter4.tex
@@ -210,11 +210,11 @@ Nous avons donc décider de combiner ces résultats finales prédites par les  l
 \section{Réalisation de L'\ac{API}}
 Comme souligné dans la méthodologie \ac{CRISP-DM} la dernière étape d'un projet data mining c'est la mise en production du modèle d'apprentissage , cette mise en production on l'a fait sous forme d'un service web de type \ac{REST} dans une micro application construit avec le framework flask .
 \subsection{\ac{TDD} \cite{TDD}} 
-Nous avions utilisée le \ac{TDD} avec \ac{CI} pour concevoir notre application et le mettre en production .
+Nous avons utilisé le \ac{TDD} avec \ac{CI} pour concevoir notre application et le mettre en production .
 \subsubsection{Définition}
 Le test-driven development (TDD) ou en français développement piloté par les tests est une technique de développement de logiciel qui préconise d'écrire les tests unitaires avant d'écrire le code source d'un logiciel.
 \subsubsection{Cycle de TDD}
-Le cycle préconisé par TDD comporte cinq étapes comme nous pouvions le remarquer à la figure \ref{lfig:TDD}  :
+Le cycle préconisé par TDD comporte cinq étapes comme nous pouvons le remarquer à la figure \ref{lfig:TDD}  :
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\textwidth]{fig/Cycle-global-tdd.png}
@@ -240,12 +240,30 @@ Notre \ac{API} fonctionne selon le diagramme suivant :
 \end{figure}  
 \begin{enumerate}
 	\item le client we(navigateur ) envoi une requête post avec les données au format \ac{JSON} (non de l'école , l'option et le pourcentage du diplôme) et un token d'authentification 
-	\item la requête est traité et authentifier et ensuite envoyer vers le contrôleur .
-	\item  pré-traitement des données : les données sont encodés et échelonner 
-	\item  prédiction : les calculs sont effectué par nos modèles de prédiction 
-	\item le contrôleur renvoie différentes prédictions sous forme d'objet \ac{JSON} et sont affiché au navigateur.  
+	\item la requête est traitée et authentifiée et ensuite envoyeée vers le contrôleur .
+	\item  pré-traitement des données : les données sont encodées et échelonnées 
+	\item  prédiction : les calculs sont effectués par nos modèles de prédiction 
+	\item le contrôleur renvoie différentes prédictions sous forme d'objet \ac{JSON} et sont affichées au navigateur.  
 \end{enumerate}
+
+
 Notons que l'API fonctionne selon le modèle \ac{MVC} simplifié (sans base des données).
+Voici deux captures d'écran qui montrent le fonctionnement des 2 fonctionnalités de l'application :
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.5\textwidth]{fig/form.png}
+	\caption{Formulaire pour la saisie des données }
+	\label{fig:apiForm}
+\end{figure}  
+Et les résultats sont affichées sur la figure suivante :  
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.5\textwidth]{fig/results.png}
+	\caption{Formulaire de l'affichage des résultats}
+	\label{fig:displaydata}
+\end{figure}  
+Notons que l'application est hébergée et peut être tester à l'adresse suivante : https://grade-predictor-app.herokuapp.com/
+  
 \section{Conclusion Partielle }
 Au chapitre précédent nous avons pu remarquer qu'il existait une forte corrélation entre le CGPA et l'option suivie par l'étudiant à l'école secondaire ,et entre l'école de provenance et le CGPA , mais nous avons aussi souligné qu'il n'existait pas de corrélation entre le CGPA et Le DIPERC mais nous avons décider de l'utiliser dans la prédiction du CGPA pour améliorer l'exactitude ne notre modèle et le rendre plus subjectif  .
 
