putting table of contents on the top

--- a/bib/litterature.bib
+++ b/bib/litterature.bib
@@ -3,17 +3,18 @@
 	title = {Savoir plus : outils et méthodes de travail intellectuel},
 	Year = {2006},
 	publisher={Les Éditions de la Chenelière inc },
+	pages ={19}
 }
 
 @article{Articl1Mr,
-author    =  {S. IMANE  , E. B. OMAR },
+author    =  {IMANE S ,  OMAR E.B },
 title      =  {Prediction approach for improving students orientation in  university: case of sidi mohammed ben abdelah university},
 journal  =  { International Journal of Computer Science and Applications},
 year        =  {2015},
 pages      =  {108},
 }
 @book{MBaterBook,
-author    =  {M. BATER },
+author    =  {BATER M.},
 title      =  {Learning Data mining with R },
 year        =  { 2015},
 publisher={Pack publish },
@@ -30,7 +31,7 @@ pages      =  {10},
 
 @misc{AndNgCourse,
 	title= {Stanford CS229 -Machine Learning -Ng},
-	author= {Andrew Ng},
+	author= {ANDREW Ng.},
 	year= {2011},
 	howpublished={\url{https://www.coursera.org/learn/machine-learning}},
 	note = {Accessed: 2016-11-23 au 2016-12-05}
@@ -38,7 +39,7 @@ pages      =  {10},
 
 
 @book{NNBook,
-	author    =  {Bishop C },
+	author    =  {BISHOP C. },
 	title      =  {Neural networks for pattern recognition },
 	year        =  {1995},
 	publisher={Clarendon Press},
@@ -54,14 +55,14 @@ pages      =  {10},
 }
 @misc{SVm2,
 	title= {Everything You Wanted to Know about the Kernel Trick},
-	author= {Eric Kim},
+	author= {Eric KIM},
 	year= {2011},
 	howpublished={\url{http://www.eric-kim.net/eric-kim-net/posts/1/kernel_trick.html}},
 	note = {Accessed: 2016-12-09}
 }
 
 @book{DMandMLBook,
-	author    =  {Ian H. Witten,Eibe Frank,Mark A. Hall },
+	author    =  {Ian  WITTEN H.,Eibe FRANK,Mark  HALL},
 	title      =  {Data Mining
 	Practical Machine Learning 
 	Tools and Techniques },
@@ -71,14 +72,14 @@ pages      =  {10},
 	pages      =  {1},
 }
 @book{TreeBk1,
-	author    =  {C. Decaestecker,
-	M.Saerens },
+	author    =  { DECAESTECKER C.,
+	SAERENS M. },
 	title      =  {Les arbres de décision
 	(decision trees) },
 	year        =  { 2006},
 	publisher={inédit ULB },
 	location={Belgique},
-	pages      =  {1},
+	pages      =  {10},
 }
 
 @online{TreeAV,
@@ -91,7 +92,7 @@ pages      =  {10},
 }
 @incollection{RandomForrest1,
 	title={Random forests},
-	author={Breiman, Leo},
+	author={ Leo BREIMAN},
 	journal={Machine learning},
 	volume={45},
 	number={1},
@@ -109,13 +110,13 @@ pages      =  {10},
 }
 
 @unpublished{coursKasoro,
-	author        = {K. Mulenda},
+	author        = {MULENDA K.},
 	title         = {cours d’intelligence artificielle et systèmes experts},
 	year          = {juin 2016},
 	note={ inédit FSTA ULPGL}
 }
 @online{differenceMLDM2,
-	author = {DHAKSHAYANI N},
+	author = {DHAKSHAYANI N.},
 	editor = {Quora},
 	title = {What is the difference between data mining, artificial intelligence and machine learning?},
 	date = {18-06-2016},
@@ -125,12 +126,12 @@ pages      =  {10},
 
 @phdthesis{DMdef,
 	title={Une plate forme orient{\'e}e agent pour le data mining},
-	author={CHAMI, Djazia},
+	author={Djazia CHAMI},
 	year={2010},
 	school={Universit{\'e} de Batna 2}
 }
 @online{differenceMLDMStack,
-	author = {Gongsun L.},
+	author = {GONGSUN L.},
 	editor = {StackExchange},
 	title = {What is the difference between data mining, statistics, machine learning and AI?},
 	date = {12-04-2013},
@@ -138,28 +139,28 @@ pages      =  {10},
 	note = {Answer To StackExchange Question},
 }
 @book{Orbk1,
-	author    =  {Laure J.  },
+	author    =  {LAURE J.  },
 	title      =  {Guide Pratique  Parents },
 	year        =  { 2015},
 	location={Paris},
 	pages      =  {10},
 }
 @book{OrBk2,
-	author    = { Bruno Racine. et al s },
+	author    = { Bruno RACINE. et al s },
 	title      =  {Rapport  haut conseil d’éducation  },
 	year        =  { 2008},
 	publisher={inédit },
 	location={Paris},
 }
 @book{OrBk3,
-	author    = { ANNIE TARDIF},
+	author    = {Annie TARDIF},
 	title      =  {L’orientation scolaire et professionnelle pour la réussite des élèves handicapés ou en difficulté},
 	year        =  { 2008},
 	publisher={inédit},
 	location={Québec},
 }
 @book{OrBk4,
-	author    = { J. Guichard et M. Huteau},
+	author    = {GUIiCHARD J.et HUTEAU P.},
 	title      =  {Psychologie de l’orientation},
 	year        =  { 2009},
 	publisher={Dunod},
@@ -180,9 +181,9 @@ pages      =  {10},
 	location={Kinshasa},
 }
 
-@incollection{statBook1
+@incollection{statBook1,
 	title={Unsupervised learning},
-	author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
+	author={Hastie, Trevor TIBSHIRANI, Robert FRIEDMAN},
 	booktitle={The elements of statistical learning},
 	pages={485--585},
 	year={2009},
@@ -191,7 +192,7 @@ pages      =  {10},
 
 @article{missinValues,
 	title={Imputation des données manquantes : Comparaison de différentes approches.},
-	author={Mélanie Glasson-Cicognani & André Berchtold},
+	author={Mélanie GLASSON-CICOGNANI & André BERCHTOLD},
 	journal={Journées de Statistique},
 	volume={42},
 	number={III},
@@ -201,7 +202,7 @@ pages      =  {10},
 }
 
 @book{bookSckit-Learn,
-	author={Aurélien Géron},
+	author={Aurélien GERON},
 	title={Hands-On Machine Learning with Scikit-Learn and TensorFlow},
 	year={March 2017},
 	publisher={O’Reilly Media, Inc.},
@@ -210,7 +211,7 @@ pages      =  {10},
 
 @article{breiman2001random,
 	title={Random forests},
-	author={Breiman, Leo},
+	author={Breiman LEO},
 	journal={Machine learning},
 	volume={45},
 	number={1},
@@ -241,14 +242,14 @@ pages      =  {10},
 
 @phdthesis{becker2011uncertainty,
 	title={Uncertainty propagation through large nonlinear models},
-	author={Becker, William},
+	author={Becker WILLIAM},
 	year={2011},
 	school={University of Sheffield}
 }
 
 @article{de2015statsref,
 	title={STATSREF: Statistical Analysis Handbook-a web-based statistics},
-	author={de Smith, MJ},
+	author={De SMITH, MJ},
 	year={2015}
 }
 @online{DataExpAV,
@@ -259,7 +260,7 @@ pages      =  {10},
 	urldate = {2017-05-27}
 }
 @book{MissinVal,
-	author={Little R.J.A., Rubin D.B. },
+	author={LITTLE R.J.A., RUBIN D.B. },
 	title={Statistical Analysis
 	with Missing Data},
 	year={1987},
@@ -267,7 +268,7 @@ pages      =  {10},
 	city={New York}
 }
 @online{LevStack,
-	author = {NIlesh Sh.},
+	author = {NILLESH Sh.},
 	editor = {Stack Exchange},
 	title = {Fuzzy Group By, Grouping Similar Words},
 	date = {12-07-2012},
@@ -275,7 +276,7 @@ pages      =  {10},
 	note = {Answer To StackOverflow question }
 }
 @online{OneHotEncoding,
-	author = {Rapaio P.},
+	author = {RAPAIO P.},
 	editor = {Stack Exchange},
 	title = {Strings as features in decision tree/random forest},
 	date = {25-05-2015},
@@ -284,7 +285,7 @@ pages      =  {10},
 }
 
 @book{ProbaStat,
-	author    =  {Prasanna S. },
+	author    =  {PRASANNA S. },
 	title      =  {Probability And Mathemathical  Statistics},
 	year        =  {2005},
 	publisher={Department of Mathematics, University of Louisville},
@@ -292,14 +293,15 @@ pages      =  {10},
 }
 @phdthesis{CrossValidation,
 	title={Probability bounds for the cross-validation estimate in the context of the statistical learning theory and statistical models applied to economics and finance},
-	author={Cornec, Matthieu},
+	author={Cornec  MATTHIEU},
 	year={2009},
 	school={Université de Nanterre-Paris X}
 }
 @book{TDD,
-	author    =  {Kent Beck },
+	author    =  {Kent BECK },
 	title      =  {Test Driven Development: By Example},
 	year        =  {2002},
 	publisher={Addison-Wesley Professional},
-	location ={New York}
+	location ={New York},
+	page={24}
 }
