--- a/memoire.tex
+++ b/memoire.tex
@@ -61,6 +61,9 @@ top=2.5cm,right=2.5cm,bottom=2.5cm]{geometry}
 \input{text/remerciements.tex}\cleardoublepage
 \input{text/resume.tex}\cleardoublepage
 \input{text/abstract.tex}\cleardoublepage
+\tableofcontents
+\listoffigures
+\listoftables\cleardoublepage
 \input{text/abreviation}\newpage\cleardoublepage
 \pagenumbering{arabic}
 \input{text/introduction}\newpage\cleardoublepage
@@ -76,8 +79,5 @@ top=2.5cm,right=2.5cm,bottom=2.5cm]{geometry}
 \input{text/chapter3.tex}\cleardoublepage
 \input{text/chapter4.tex}\cleardoublepage
 \input{text/conclusion.tex}\cleardoublepage
-\tableofcontents
-\listoffigures
-\listoftables
 \printbibliography
 \end{document}
