final presentation done need

--- a/Text/firstChapiter.tex
+++ b/Text/firstChapiter.tex
@@ -38,8 +38,7 @@ Le data mining peut aussi être défini comme un processus inductif, itératif  
 
 -	Compréhensibles : présentation simple
 
-\subsection{  Différence entre le DataMining , le Machine Learning, ainsi que les statistiques .} 
-	{\cite{differenceMLDM2} \cite{differenceMLDM} \cite{differenceMLDMStack}}
+\subsection{  Différence entre le DataMining , le Machine Learning, ainsi que les statistiques . {\cite{differenceMLDM2} \cite{differenceMLDM} \cite{differenceMLDMStack}}} 
 \paragraph{}
 A première vue on pourrait constater que ces 3 disciplines n'ont aucune différence car tous traitent de la même question : comment apprendre des données ?, couvrent les mêmes matières et utilisent les mêmes techniques qui sont entre autres : la régression linéaire, la régression logistique  , le réseau des neurones , le Support Vector Machine ,....
 \paragraph{} 
@@ -55,4 +54,4 @@ Il nécessite l'étude des algorithmes qui peuvent extraire l'information utile 
 \section{{ Différentes Techniques du Machine Learning   \cite{AndNgCourse}	} } 
 Dans cette partie nous allons passer en revue quelques méthodes et algorithmes utilisées dans le machine learning.
 Notons que ces méthodes se divisent en 2 groupes : l'apprentissage supervisée et l'apprentissage non supervisé.Concernant l'apprentissage supervisé nous parlerons de la régression linéaire , la régression, le réseau des neurones, le SVM(Support Vector Machine) , les arbres de décision et nous finirons par le Random Forrest qui n'est qu'une amélioration des arbres de décisions.
-Dans ce travail nous parlerons beaucoup plus des techniques de classification.
+Dans ce travail nous parlerons beaucoup plus des techniques de l'apprentissage supervisé.
