--- a/memoire.tex
+++ b/memoire.tex
@@ -61,9 +61,6 @@ top=2.5cm,right=2.5cm,bottom=2.5cm]{geometry}
 \input{text/remerciements.tex}\cleardoublepage
 \input{text/resume.tex}\cleardoublepage
 \input{text/abstract.tex}\cleardoublepage
-\tableofcontents
-\listoffigures
-\listoftables\cleardoublepage
 \input{text/abreviation}\newpage\cleardoublepage
 \pagenumbering{arabic}
 \input{text/introduction}\newpage\cleardoublepage
@@ -80,4 +77,7 @@ top=2.5cm,right=2.5cm,bottom=2.5cm]{geometry}
 \input{text/chapter4.tex}\cleardoublepage
 \input{text/conclusion.tex}\cleardoublepage
 \printbibliography
+\tableofcontents
+\listoffigures
+\listoftables
 \end{document}
